# controller-new

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  settings.toml
.github/workflows/: CI.yaml
alembic/: env.py
alembic/versions/: 4b8b5e523e67_init.py  7afaf678dc8c_init.py
app/infrastructure/database/: base.py  models.py
app/infrastructure/utils/: commands.py  config.py  logging.py
app/tgbot/: __main__.py  constants.py
app/tgbot/dialogs/: create.py  menu.py
app/tgbot/handlers/: client.py
app/tgbot/locales/: en.flt  ru.flt
app/tgbot/middlewares/: fluent.py  i18n.py  trolttling.py
app/tgbot/states/: user.py
app/tgbot/taskiq-test/: main.py
app/tgbot/translations/en/: main.ftl
app/tgbot/translations/ru/: main.ftl
application/core/config/: config.py  constants.py  parser.py
application/core/interfaces/: adapter.py
application/core/misc/: logging.py  maker.py  makers.py
application/domain/user/dto/: user.py
application/infrastructure/database/: adapter.py  base.py  models.py
application/infrastructure/database/adapter/: adapter.py
application/infrastructure/database/migrations/: env.py
application/infrastructure/database/models/: __init__.py  base.py  schemas.py  tables.py
application/infrastructure/database/repositories/: adapter.py
application/infrastructure/fsm/: adapter.py  storage.py
application/infrastructure/scheduler/: tasks.py  tkq.py
application/infrastructure/stream/: worker.py
application/tgbot/: __main__.py
application/tgbot/dialogs/: calendar.py  create.py  menu.py
application/tgbot/dialogs/_extras/: calendar.py
application/tgbot/handlers/: client.py  errors.py  user.py
application/tgbot/keyboards/: inline.py
application/tgbot/middlewares/: database.py  i18n.py
application/tgbot/states/: states.py  user.py
configs/: settings.toml
docker/: Dockerfile  docker-compose.yaml
migrations/: env.py
migrations/versions/: 131f5dc58399_init_table.py  2263146f4498_initial_table.py  3ce5f8f7505d_init_table.py  626662a9193a_initial_table.py  66e8a9c9227c_initial_table.py  8ad4bfd6d64c_init.py  942d573e4d53_initial_table.py  9fd67a99519d_initial_table.py  aa4da43c2c3b_initial_table.py  b1be00ab47da_initial_table.py  c0b048f1bbd8_init.py  c52f22e3dd6e_initial_table.py
src/core/config/: parser.py  validator.py
src/core/utils/: builders.py
src/infrastructure/scheduler/: tasks.py  tkq.py
src/infrastructure/stream/: worker.py
src/presentation/tgbot/: __main__.py
taskiq-test/: main.py
test-nats/: test.py
tgbot/: __main__.py  config.py
tgbot/database/: models.py
tgbot/dialogs/: create.py  menu.py
tgbot/handlers/: client.py  errors.py
tgbot/middlewares/: database.py  trolttling.py
tgbot/states/: user.py
tgbot/taskiq-test/: main.py
(+54 files in other folders)
